fix home promo images and carousel *upload new images *images now responsive and don't jump *fix carousel to take full width on load

--- a/src/features/carousel/carousel.module.scss
+++ b/src/features/carousel/carousel.module.scss
@@ -24,6 +24,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+}
+.carousel {
+  width: 100%;
 }
 
 .handle {
@@ -42,7 +46,6 @@
 
 .disabled {
   color: $light-gray;
-  cursor: not-allowed;
 }
 
 .carousel {
