--- a/src/features/home/home.module.scss
+++ b/src/features/home/home.module.scss
@@ -2,7 +2,6 @@
 
 .hero_block {
   position: relative;
-  margin: -140px 0 -100px;
   z-index: 0;
   background: none;
 }
@@ -18,12 +17,23 @@
   position: relative;
   padding: 0 15px;
   background: none;
+  width: 100%;
+}
+
+.img_wrapper {
+  position: relative;
+  padding-top: 419/1074 * 100%;
+  overflow: hidden;
 }
 
 .promo_img {
-  width: 1160px;
-  height: 585px;
-  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+
+  object-fit: contain;
   user-select: none;
   pointer-events: none;
 }
@@ -32,7 +42,7 @@
   position: absolute;
   left: 5%;
   top: 50%;
-  transform: translateY(-40%);
+  transform: translateY(-60%);
   max-width: 38%;
   width: fit-content;
 
